diesel_compile_tests/tests/fail/derive/bad_primary_key.stderr
error: expected `,`
  --> tests/fail/derive/bad_primary_key.rs:12:30
   |
LL | #[diesel(primary_key(id, bar = "baz"))]
   |                              ^

error: expected `,`
  --> tests/fail/derive/bad_primary_key.rs:20:29
   |
LL | #[diesel(primary_key(id, qux(id)))]
   |                             ^

error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(key1, key2)]`
  --> tests/fail/derive/bad_primary_key.rs:28:21
   |
LL | #[diesel(primary_key)]
   |                     ^

error: expected parentheses
  --> tests/fail/derive/bad_primary_key.rs:36:22
   |
LL | #[diesel(primary_key = id)]
   |                      ^
